--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.0.20",
+    "@mui/icons-material": "^5.16.7",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^5.16.7",
     "next": "14.2.5",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
